<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@drawable/splash_background"
    android:padding="40dip"
    android:gravity="center_vertical">
	    
    <LinearLayout 
        android:id="@+id/login_screen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        
        <TextView 
	        android:id="@+id/title"
	       	android:layout_width="match_parent"
	       	android:layout_height="wrap_content"
	       	android:gravity="center_horizontal"
	       	android:text="@string/app_name"
	       	style="@style/header"
	       	android:paddingBottom="10dp"
	       	/>
	    
	    <TextView 
	        android:id="@+id/crnLabel"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:textColor="#000000"
	        android:text="@string/crn"/>
	    
	    <EditText android:id="@+id/crn"
	        android:inputType="numberSigned"
	        android:maxLength="12"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"/>
	    
	    <Button android:id="@+id/loginButton"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/login"/>
	    
	    <TextView
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:gravity="center_horizontal"
	        android:layout_marginTop="10dip"
	        android:textColor="#000000"
	        android:text="@string/bankid" />
        
    </LinearLayout>
	
</LinearLayout>